# thesupergamermajorwork

./: README.md
game/: Cargo.toml  rust-toolchain.toml  shell.nix
game/levels/: default.plvl  test.plvl
game/pythoneer_macros/: Cargo.toml
game/pythoneer_macros/src/: lib.rs
game/src/: camera.rs  debug.rs  geometry.rs  main.rs
game/src/game/: level.rs  logging.rs  mod.rs
game/src/game/execution/: channel.rs  execution_state.rs  mod.rs  run.rs
game/src/game/python/: mod.rs
game/src/game/starlark/: level.rs  mod.rs  room.rs
game/src/scenes/: mod.rs
game/src/scenes/editor/: mod.rs  ui.rs
game/src/scenes/main_menu/: main_menu.rs  mod.rs
game/src/ui/: button.rs  egui.rs  mod.rs
